<resources>
    <string name="app_name">Driver License Tests</string>
    <string name="back4app_app_id">lmj5p9coFxtlfHx5EY6ZMZEmZwZkB6UqSM7tP5vj</string>
    <string name="back4app_client_key">1lD4V2Nbw6KwnG8FUbUAM56KsvwMYlxEVK89Py6d</string>
    <string name="back4app_server_url">https://parseapi.back4app.com</string>

    <string name="select_state">Select State</string>
    <string name="practice">Practice</string>
    <string name="main_menu">Main Menu</string>
    <string name="level_name">Level Name</string>
    <string name="level_number">1</string>
    <string name="state_name">State Name</string>
    <string name="capital_name">Capital Name</string>
    <string name="practice_main_menu">Practice</string>
    <string name="traffic_sign_main_menu">Traffic Sign</string>
    <string name="test_main_menu">Test</string>
    <string name="reading_main_menu">Reading</string>
    <string name="settings_main_menu">Settings</string>
    <string name="test_content">Any direction, but set the parking break. Any direction, but set the parking break."</string>
    <string name="next_question">Next</string>
    <string name="state_selection">State selection</string>
    <string name="language_selection">Language selection</string>
    <string name="share">Share</string>
    <string name="toolbar_title">ToolBar Title</string>
    <string name="question_number">1/10</string>
    <string name="whoops">WHOOPS</string>
    <string name="trying_to_connect">Trying to connect…</string>
    <string name="connect_phone">Make sure your phone is connected to the Internet.</string>
    <string name="action_search">Search for traffic sign…</string>
    <string name="Test">Test</string>
    <string name="test_passed">You Passed the test!</string>
    <string name="test_score">Test Score</string>
    <string name="test_not_passed">The next time you must be better!</string>
    <string name="answer_sheet">Answer Sheet</string>
    <string name="share_the_app">Share the App</string>
    <string name="try_again">Try again</string>
    <string name="do_new_test">Do a new test</string>


</resources>
