<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_test_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/test_score"
        android:textAppearance="@style/ToolBar.TitleText"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_test_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:textAppearance="@style/ToolBar.TitleText"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_test_result"
        tools:text="@string/test_score" />

    <ImageView
        android:id="@+id/image_view_test_percentage"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_test_score" />

    <ImageView
        android:id="@+id/image_view_test_try"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_test_percentage" />

    <TextView
        android:id="@+id/text_view_test_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/test_score"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_test_percentage"
        app:layout_constraintEnd_toEndOf="@+id/image_view_test_percentage"
        app:layout_constraintStart_toStartOf="@+id/image_view_test_percentage"
        app:layout_constraintTop_toTopOf="@+id/image_view_test_percentage" />

    <ImageView
        android:id="@+id/image_view_test_answer_sheet"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_test_try"
        app:srcCompat="@drawable/ic_share_and_sheet" />

    <ImageView
        android:id="@+id/image_view_test_share"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_test_try"
        app:srcCompat="@drawable/ic_share_and_sheet" />

    <TextView
        android:id="@+id/text_view_test_try"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textAppearance="@style/ToolBar.TitleText"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_test_try"
        app:layout_constraintEnd_toEndOf="@+id/image_view_test_try"
        app:layout_constraintStart_toStartOf="@+id/image_view_test_try"
        app:layout_constraintTop_toTopOf="@+id/image_view_test_try"
        tools:text="@string/test_score" />

    <TextView
        android:id="@+id/text_view_test_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/answer_sheet"
        android:textAppearance="@style/ToolBar.TitleText"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_test_answer_sheet"
        app:layout_constraintEnd_toEndOf="@+id/image_view_test_answer_sheet"
        app:layout_constraintStart_toStartOf="@+id/image_view_test_answer_sheet"
        app:layout_constraintTop_toTopOf="@+id/image_view_test_answer_sheet" />

    <TextView
        android:id="@+id/text_view_test_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/share_the_app"
        android:textAppearance="@style/ToolBar.TitleText"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_test_share"
        app:layout_constraintEnd_toEndOf="@+id/image_view_test_share"
        app:layout_constraintStart_toStartOf="@+id/image_view_test_share"
        app:layout_constraintTop_toTopOf="@+id/image_view_test_share" />
</androidx.constraintlayout.widget.ConstraintLayout>