<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_settings_share"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_2">

        <ImageView
            android:id="@+id/image_view_settings_share"
            android:layout_width="13dp"
            android:layout_height="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_settings_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_settings_share"
            app:srcCompat="@drawable/ic_settings_arrow" />

        <TextView
            android:id="@+id/text_view_settings_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/share"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_settings_state_selection"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_view_settings_state_selection"
            android:layout_width="13dp"
            android:layout_height="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_settings_state_selection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_settings_state_selection"
            app:srcCompat="@drawable/ic_settings_arrow" />

        <TextView
            android:id="@+id/text_view_settings_state_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/state_selection"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="221dp"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout_settings_state_selection"/>


    <View
        android:id="@+id/view_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout_settings_language_selection" />

    <View
        android:id="@+id/view_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout_settings_share" />

    <include
        layout="@layout/custom_toolbar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_settings_language_selection"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout_settings_state_selection">

        <ImageView
            android:id="@+id/image_view_settings_language_selection"
            android:layout_width="13dp"
            android:layout_height="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_settings_language_selection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_settings_language_selection"
            app:srcCompat="@drawable/ic_settings_arrow" />

        <TextView
            android:id="@+id/text_view_settings_language_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/language_selection"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>